# lvgl_port_M5Core2

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
